# AOC

./: .gitignore  CMakeLists.txt  Day2Part2.cpp  Day3Part1.cpp  Day3Part2.cpp  README.md  input2.txt  test  test.cpp  test1.cpp
2024/: D2_2.cpp  D3_1.cpp  D3_2.cpp
2025/: D1_1.cpp  D1_2.cpp  D2_1.cpp  D2_2.cpp
Utility/: CMakeLists.txt  InputOutputStream.cpp  InputOutputStream.h  IntOperations.cpp  IntOperations.h  StringOperations.cpp  StringOperations.h
